src/www.arragro.com/wwwroot/css/site.scss
/* ... */
#contact {
    .contact-container {
        position: relative;
        height: 155vh;
        font-size: 1rem;

        @media (orientation: landscape) and (min-device-width:412px) {
            height: 275vh;
        }

        @media (orientation: landscape) and (min-device-width:533px) {
            height: 310vh;
        }

        @media (orientation: landscape) and (min-device-width:568px) {
            height: 310vh;
        }

        @media (orientation: landscape) and (min-device-width:640px) {
            height: 270vh;
        }

        @media (orientation: landscape) and (min-device-width:650px) {
            height: 265vh;
        }

        @media (orientation: landscape) and (min-device-width:700px) {
            height: 240vh;
        }

        @media (orientation: landscape) and (min-device-width: 768px) and (min-device-height: 800px) {
            height: 40vh;
        }

        @media (orientation: landscape) and (min-device-width:800px) and (min-device-height:375px) {
            height: 135vh;
        }

        @media (orientation: landscape) and (min-device-width:800px) and (min-device-height:500px) {
            height: 50vh;
        }

        @media (orientation: landscape) and (min-device-width:960px) and (min-device-height:600px) {
            height: 90vh;
        }

        @media (orientation: landscape) and (min-device-width:1024px) and (min-device-height:768px) {
            height: 40vh;
        }

        @media (orientation: portrait) and (min-device-height:533px) {
            height: 190vh;
        }

        @media (orientation: portrait) and (min-device-height:568px) {
            height: 155vh;
        }

        @media (orientation: portrait) and (min-device-height:641px) {
            height: 150vh;
        }

        @media (orientation: portrait) and (min-device-height:700px) {
            height: 135vh;
        }

        @media (orientation: portrait) and (min-device-height: 736px) {
            height: 135vh;
        }

        @media (orientation: portrait) and (min-device-height: 812px) {
            height: 120vh;
        }

        @media (orientation: portrait) and (min-device-height: 823px) {
            height: 120vh;
        }

        @media (orientation: portrait) and (min-device-height: 1020px) {
            height: 53vh;
        }

        @media (orientation: portrait) and (min-device-height: 1200px) {
            height: 65vh;
        }

        @media (orientation: portrait) and (min-device-height: 1280px) {
            height: 25vh;
        }

        @media (orientation: portrait) and (min-device-height: 1280px) and (min-device-width: 800px) {
            height: 45vh;
        }

        @media (orientation: portrait) and (min-device-height: 1366px) and (min-device-width: 1024px) {
            height: 25vh;
        }

        @media (orientation: portrait) and (min-device-height: 1380px) {
            height: 65vh;
            max-height: 520px
        }

        h3, h4, h5 {
            color: darken($blue, 8%);
            margin-top: 1rem;
        }

        .location {
            h5:first-child {
                margin-top: 0;
            }
        }

        .contact-section {
            h5 {
                margin-top: 1rem;
            }
        }

        @media (min-height: 800px) and (min-width: 768px) {
            .location {
                h5:first-child {
                    margin-top: 1rem;
                }
            }
        }

        .map-container, contact-container {
            width: 100%;
            top: 0;
        }

        .map-container {
            height: 50%;

            .row, [class^='col-']:last-child {
                height: 100%;
            }

            @media (min-width: 768px) {
                height: 100%;
                position: absolute;
            }
        }

        .contact-details {
            height: auto;

            .location, .contact-details {
                width: 100%;
            }

            .pt-5 {
                padding-top: 1rem !important;
            }

            @media (min-width: 768px) {
                height: 100%;

                .pt-5 {
                    padding-top: 2rem !important;
                }
            }

            @media (orientation: landscape) and (min-width: 768px) and (min-height: 1180px) {
                .contact-section {
                    padding-top: 1rem;
                }
            }

            @media (orientation: landscape) and (max-width: 812px) {
                .pt-5 {
                    padding-top: 1rem !important;
                }
            }

            @media (orientation: landscape) and (max-width: 768px) {
                .pt-5 {
                    padding-top: 1rem !important;
                }
            }
        }
    }
}

@import './landing-page/index.scss';

